# mir_3d_image_segmentation

./: CMakeLists.txt  README.md  package.xml
ros/launch/: closed_loop_pick_base_controller.launch  closest_obj.launch  save_masked_img.launch  segmentation.launch
ros/msg/: Cluster_Pixels.msg  Clusters.msg
ros/scripts/: closed_loop_pick_base_controller  cluster_to_img
ros/src/: closest_obj.cpp  segment.cpp  segment.py
src/: .scan2cloud.cpp.swp  scan2cloud.cpp  segment.cpp  segment.py  segment_old.cpp  segment_old.py
